--- a/src/app/incomes/incomes.page.html
+++ b/src/app/incomes/incomes.page.html
@@ -1,49 +1,63 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border" [translucent]="true">
   <ion-toolbar color="primary">
     <ion-back-button slot="start" color="light"></ion-back-button>
     <ion-title>
       BudgetBoi
     </ion-title>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
-  <ion-card color="primary">
+  <ion-card button detail='false' color="primary" (click)='showHideCardContent()'>
     
     <ion-card-header>
       <ion-card-subtitle>Step 1</ion-card-subtitle>
       <ion-card-title>Your Incomes</ion-card-title>
     </ion-card-header>
-    <ion-card-content>
-      This is where we determine how much money we have to budget.
-      Start with any money you want to include from last pay period, 
-      then enter the amount you received this pay period next to each of your incomes.
+    <ion-card-content *ngIf='showCardContent'>
+      <p>This is where we determine how much money we have to budget.</p>
+      <p>Start with any money you want to include from last pay period, 
+      then enter the amount you received this pay period next to each of your incomes.</p>
+      <br>
+      <p><strong>Swipe left</strong> on an income to edit or delete.</p>
+      <br>
+      <p>Click to close instructions.</p>
     </ion-card-content>
   </ion-card>
 
-  <ion-list lines="full" inset="true">
+  <ion-list lines="full" inset="false">
 
     <ion-item>
       <ion-label class="ion-text-wrap">Starting Amount</ion-label>
       <ion-note slot="end">$</ion-note>
-      <ion-input slot="end" placeholder="0"></ion-input>
+      <ion-input type='number' slot="end" [(ngModel)]='startAmount'></ion-input>
     </ion-item>
 
-    <ion-item-sliding>
+
+    <ion-item-sliding *ngFor='let income of incomes$ | async; index as i;'>
+
         <ion-item>
-          <ion-label>Income 1</ion-label>
+
+          <ion-label class='ion-text-wrap'>{{ income.name }}</ion-label>
+
           <ion-note slot="end">$</ion-note>
-          <ion-input slot="end" placeholder="1000"></ion-input>
+
+          <ion-input type='number' slot="end"[name]='income.name' [(ngModel)]='values[i].amount'></ion-input>
+
         </ion-item>
+
+
         <ion-item-options>
-          <ion-item-option color="dark">
+          <ion-item-option color="dark" (click)='editIncome(income.id, income)'>
             <ion-icon name="create"></ion-icon>
             <ion-label>
               Edit
             </ion-label>
           </ion-item-option>
-          <ion-item-option color="danger">
+
+          <ion-item-option color="danger" (click)='deleteIncome(income.id, income)'>
             <ion-icon name="trash"></ion-icon>
             <ion-label>
               Delete
@@ -52,7 +66,7 @@
         </ion-item-options>
       </ion-item-sliding>
 
-      <ion-item-sliding>
+      <!-- <ion-item-sliding>
         <ion-item>
           <ion-label>Income 2</ion-label>
           <ion-note slot="end">$</ion-note>
@@ -72,9 +86,15 @@
             </ion-label>
           </ion-item-option>
         </ion-item-options>
-      </ion-item-sliding>
+      </ion-item-sliding> -->
 
       <ion-item>
+        <ion-label class='ion-text-wrap'>Other Income</ion-label>
+        <ion-note slot="end">$</ion-note>
+        <ion-input type='number' slot="end" [(ngModel)]='otherIncomesTotal'></ion-input>
+      </ion-item>
+
+      <ion-item button detail='false' (click)='addIncome()'>
         <ion-icon name="add-circle" slot="start" color="primary"></ion-icon>
         <ion-label>Add an income.</ion-label>
       </ion-item>
@@ -85,8 +105,8 @@
 </ion-content>
 
 
-<ion-footer>
+<!-- <ion-footer class="ion-no-border">
   <ion-toolbar color="light">
     <ion-title>Ad Space</ion-title>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
