--- a/src/app/bills/bills.page.html
+++ b/src/app/bills/bills.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border" [translucent]="true">
   <ion-toolbar color="primary">
     <ion-back-button slot="start" color="light"></ion-back-button>
     <ion-title>
@@ -7,40 +7,58 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" *ngIf='!fireService.isUser'>
 
-  <ion-card color="primary">
+</ion-content>
+
+<ion-content class="ion-padding" *ngIf='fireService.isUser'>
+
+  <ion-card button detail='false' color="primary" (click)='showHideCardContent()'>
       <ion-card-header>
         <ion-card-subtitle>Step 2</ion-card-subtitle>
         <ion-card-title>Your Bills</ion-card-title>
       </ion-card-header>
-      <ion-card-content>
-        Check off each bill due during the pay period you are budgeting. 
+      <ion-card-content *ngIf='showCardContent'>
+        <p>Check off each bill due during the pay period you are budgeting.</p>
+        <br>
+        <p><strong>Swipe left</strong> on a bill to edit or delete.</p>
+        <br>
+        <p>Click to close instructions.</p>
       </ion-card-content>
   </ion-card>
 
 
 
-  <ion-list lines="full" inset="true">
+  <ion-list lines="full" inset="false">
 
 
+    <ion-item *ngIf='bills$'>
+      <ion-label slot='start'>Due Date</ion-label>
+      <ion-label slot='start'>Name</ion-label>
+      <ion-label>Amount</ion-label>
+    </ion-item>
 
-    <ion-item-sliding>
+    <ion-item-sliding *ngFor='let bill of bills$ | async; index as i;'>
       <ion-item>
-        <ion-checkbox slot="start" color="primary"></ion-checkbox>
-        <ion-badge slot="start" color="light">1</ion-badge>
-        <ion-label>Rent</ion-label>
-        <ion-note slot="end">$925</ion-note>
+
+        <ion-checkbox style='margin-right: 10px;' slot="start" color="primary" [(ngModel)]='values[i].isChecked'></ion-checkbox>
+
+        <ion-badge class='badge-due-date' slot='start' color="light">{{ bill.dueDate }}</ion-badge>
+
+        <ion-label class="ion-text-wrap">{{ bill.name }}</ion-label>
+        
+        <ion-note slot='end'>${{ bill.amount }}</ion-note>
+        
       </ion-item>
 
       <ion-item-options>
-        <ion-item-option color="dark">
+        <ion-item-option color="dark" (click)='editBill(bill.id, bill)'>
           <ion-icon name="create"></ion-icon>
           <ion-label>
             Edit
           </ion-label>
         </ion-item-option>
-        <ion-item-option color="danger">
+        <ion-item-option color="danger" (click)='deleteBill(bill.id, bill)'>
           <ion-icon name="trash"></ion-icon>
           <ion-label>
             Delete
@@ -58,6 +76,7 @@
 
 
 
+<!--
 
   <ion-item-sliding>
     <ion-item>
@@ -84,67 +103,17 @@
     </ion-item-options>
   </ion-item-sliding>
 
+-->
 
 
-  <ion-item-sliding>
-    <ion-item>
-      <ion-checkbox slot="start" color="primary"></ion-checkbox>
-      <ion-badge slot="start" color="light">8</ion-badge>
-      <ion-label>Amazon Prime</ion-label>
-      <ion-note slot="end">$7</ion-note>
-    </ion-item>
-  
-    <ion-item-options>
-      <ion-item-option color="dark">
-        <ion-icon name="create"></ion-icon>
-        <ion-label>
-          Edit
-        </ion-label>
-      </ion-item-option>
-      <ion-item-option color="danger">
-        <ion-icon name="trash"></ion-icon>
-        <ion-label>
-          Delete
-        </ion-label>
-      </ion-item-option>
-  
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-  <ion-item-sliding>
-    <ion-item>
-      <ion-checkbox slot="start" color="primary"></ion-checkbox>
-      <ion-badge slot="start" color="light">10</ion-badge>
-      <ion-label>Car Payment</ion-label>
-      <ion-note slot="end">$185</ion-note>
-    </ion-item>
-  
-    <ion-item-options>
-      <ion-item-option color="dark">
-        <ion-icon name="create"></ion-icon>
-        <ion-label>
-          Edit
-        </ion-label>
-      </ion-item-option>
-      <ion-item-option color="danger">
-        <ion-icon name="trash"></ion-icon>
-        <ion-label>
-          Delete
-        </ion-label>
-      </ion-item-option>
-  
-    </ion-item-options>
-  </ion-item-sliding>
-
-
+ 
 
 
       <!-- end of fake bills -->
 
 
 
-    <ion-item>
+    <ion-item button detail='false' (click)='addBill()'>
       <ion-icon name="add-circle" slot="start" color="primary"></ion-icon>
       <ion-label>Add a bill.</ion-label>
     </ion-item>
@@ -152,8 +121,8 @@
 </ion-content>
 
 
-<ion-footer>
+<!-- <ion-footer class="ion-no-border">
   <ion-toolbar color="light">
     <ion-title>Ad Space</ion-title>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
